fix ssn blurb css spacing (esp. on firefox)

--- a/1/work/Tree/LendingTreeWebSite1/Styles/style.css
+++ b/1/work/Tree/LendingTreeWebSite1/Styles/style.css
@@ -479,7 +479,7 @@ div.smartTipWindow
 .smallLabel_blurb
 {
     float: left;
-    width: 280px;
+    width: 320px;
     height: 0px
 }
 .inline
